- finalize convexHall problem